<resources>
    <string name="app_name">Stocker</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="some_required_info">Some Required Info:</string>
    <string name="stocking">Stocking</string>
    <string name="tagline">All You Need Is Us</string>
    <string name="mydiary">Stocker</string>
    <string name="signup">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">User Login</string>
    <string name="login">Login</string>
    <string name="my_diary1">Stocker</string>
    <string name="my_schedule">My Schedule</string>
    <string name="search">Search</string>
    <string name="textBox">Hello kasa ha</string>
    <string name="message"></string>
    <string name="back">Back</string>
    <string name="sms" />
    <string name="save">Save</string>
    <string name="Selection">Select any day:</string>
    <string name="background">back</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="company_name">Company</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="code">Code</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="textview"></string>
    <string name="username">Username</string>
    <string name="title_activity_login">Sign in</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="stores">Categories:</string>
    <string name="appliance">appliance</string>
    <string name="register">Register</string>
    <string name="clothes">Clothes</string>
    <string name="departmental">Departmental</string>
    <string name="food">Food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="female_menu">Female</string>
    <string name="male_menu">Male</string>
    <string name="user_login">User Login</string>
    <string name="admin_login">Shopkeeper Login</string>
    <string name="admin_sinup">Shopkeeper Sinup</string>
</resources>
