<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_Home"
    android:background="@drawable/picture"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.ActionMenuView
        android:id="@+id/adminMenuView"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="364dp"
        android:layout_marginLeft="364dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/menu_icon"
        app:layout_constraintBottom_toTopOf="@+id/head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/head"
        android:layout_width="163dp"
        android:layout_height="79dp"
        android:layout_marginTop="84dp"
        android:paddingLeft="15dp"
        android:text="@string/mydiary"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="169dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tagline"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/head"
        app:layout_constraintTop_toTopOf="@+id/head" />

    <Button
        android:id="@+id/btnadddata"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="#011942"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/btndeldata"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="24dp"
        android:background="#011942"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/btnviewdata"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:background="#011942"
        android:text="@string/view"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/btndeldata"
        app:layout_constraintTop_toBottomOf="@+id/btnadddata" />

    <Button
        android:id="@+id/btnupdatedata"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="12dp"
        android:background="#011942"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/btnadddata"
        app:layout_constraintTop_toBottomOf="@+id/btndeldata" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="#011942"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag" />

    <EditText
        android:id="@+id/Code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#011942"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#011942"
        android:ems="10"
        android:hint="@string/stock"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/Code"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Code"
        app:layout_constraintTop_toBottomOf="@+id/Code" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#011942"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/stock"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/stock"
        app:layout_constraintTop_toBottomOf="@+id/stock" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#011942"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price" />

</android.support.constraint.ConstraintLayout>